--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,74 @@
+acme==1.22.0
+aiohttp==3.7.4.post0
+asttokens==2.0.5
+async-timeout==3.0.1
+attrs==21.4.0
+autopep8==1.6.0
+backcall==0.2.0
+black==21.12b0
+boto==2.49.0
+certifi==2021.10.8
+cffi==1.15.0
+chardet==4.0.0
+charset-normalizer==2.0.10
+click==8.0.3
+colorama==0.4.4
+cryptography==36.0.1
+debugpy==1.5.1
+decorator==5.1.1
 discord==1.7.3
 discord.py==1.7.3
-youtube-dl==2021.12.17
-async-timeout==3.0.1
+entrypoints==0.3
+executing==0.8.2
+Flask==2.0.2
+idna==3.3
+ipykernel==6.7.0
+ipython==8.0.0
+itsdangerous==2.0.1
+jedi==0.18.1
+Jinja2==3.0.3
+joblib==1.1.0
+josepy==1.12.0
+jsonschema==4.4.0
+jupyter-client==7.1.1
+jupyter-core==4.9.1
+MarkupSafe==2.0.1
+matplotlib-inline==0.1.3
+multidict==6.0.0
+mypy-extensions==0.4.3
+nest-asyncio==1.5.4
+nltk==3.6.7
+parso==0.8.3
+pathspec==0.9.0
+pickleshare==0.7.5
+platformdirs==2.4.1
+prompt-toolkit==3.0.24
+pure-eval==0.2.1
+pycodestyle==2.8.0
+pycparser==2.21
+Pygments==2.11.2
 PyNaCl==1.5.0
-ffmpeg==1.4
+pyOpenSSL==21.0.0
+pyRFC3339==1.1
+pyrsistent==0.18.1
+python-dateutil==2.8.2
+pytz==2021.3
+pywin32==303
+PyYAML==6.0
+pyzmq==22.3.0
+regex==2022.1.18
+requests==2.27.1
+requests-toolbelt==0.9.1
+six==1.16.0
+stack-data==0.1.4
+toml==0.10.2
+tomli==1.2.3
+tornado==6.1
+tqdm==4.62.3
+traitlets==5.1.1
+typing_extensions==4.0.1
+urllib3==1.26.8
+wcwidth==0.2.5
+Werkzeug==2.0.2
+yarl==1.7.2
+youtube-dl==2021.12.17
